[tool.poetry]
name = "2023-static-sites"
version = "0.1.0"
description = ""
authors = ["Jonathan Mair <jonathan.mair@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pelican = "^4.8.0"
markdown = "^3.4.3"
ghp-import = "^2.1.0"
invoke = "^2.1.2"
awscli = "^1.27.146"
pysvg = "^0.2.2"
pygments = "^2.15.1"
requests = "^2.31.0"
webassets = "^2.0"
pillow = "^9.5.0"
jsmin = "^3.0.1"
cssmin = "^0.2.0"
beautifulsoup4 = "^4.12.2"
pelican-pandoc-reader = "^1.2.0"
typogrify = "^2.0.7"
pelican-jinja2content = "^1.0.1"
pelican-minify = "^2.0.0"
pelican-pdf = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
